# VisionUPS-HeavyMachinery-Detection

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/bernardo/visionups/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/bernardo/visionups/: MainActivity.kt  OverlayView.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/bernardo/visionups/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
notebooks/: Entrenamiento_YOLOv8_Maquinaria.ipynb
